refactor(java): 更新注解导入并移除测试代码
- 将 javax.annotation.* 替换为 jakarta.annotation.*
- 移除所有 @Test 注解和相关测试代码
- 更新 dubbo 配置以适配 3.3 版本 API 变更
- 使用 fastjson2 替代 fastjson
- 移除未使用的导入语句